apps/staging/homarr/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homarr-headers
  namespace: homarr
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    sslRedirect: true
