apps/staging/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: homarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: homarr-homarr-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: hms.toddpillars.com
      http:
        paths:
          - backend:
              service:
                name: homarr
                port:
                  number: 7575
            path: /
            pathType: Prefix
